@@ -61,15 +61,14 @@ import com.itextpdf.text.pdf.PdfAnnotation;
 import com.itextpdf.text.pdf.PdfContentByte;
 import com.itextpdf.text.pdf.draw.DrawInterface;
 
-
 /**
  * This is the smallest significant part of text that can be added to a
  * document.
  * <P>
- * Most elements can be divided in one or more <CODE>Chunk</CODE>s. A chunk
- * is a <CODE>String</CODE> with a certain <CODE>Font</CODE>. All other
- * layout parameters should be defined in the object to which this chunk of text
- * is added.
+ * Most elements can be divided in one or more <CODE>Chunk</CODE>s. A chunk is a
+ * <CODE>String</CODE> with a certain <CODE>Font</CODE>. All other layout
+ * parameters should be defined in the object to which this chunk of text is
+ * added.
  * <P>
  * Example: <BLOCKQUOTE>
  * 
@@ -121,22 +120,24 @@ public class Chunk implements Element {
 		this.font = new Font();
 	}
 
-    /**
-     * A <CODE>Chunk</CODE> copy constructor.
-     * @param ck the <CODE>Chunk</CODE> to be copied
-     */    
-    public Chunk(Chunk ck) {
-        if (ck.content != null) {
-            content = new StringBuffer(ck.content.toString());
-        }
-        if (ck.font != null) {
-            font = new Font(ck.font);
-        }
-        if (ck.attributes != null) {
-            attributes = new HashMap(ck.attributes);
-        }
-    }
-    
+	/**
+	 * A <CODE>Chunk</CODE> copy constructor.
+	 * 
+	 * @param ck
+	 *            the <CODE>Chunk</CODE> to be copied
+	 */
+	public Chunk(Chunk ck) {
+		if (ck.content != null) {
+			content = new StringBuffer(ck.content.toString());
+		}
+		if (ck.font != null) {
+			font = new Font(ck.font);
+		}
+		if (ck.attributes != null) {
+			attributes = new HashMap(ck.attributes);
+		}
+	}
+
 	/**
 	 * Constructs a chunk of text with a certain content and a certain <CODE>
 	 * Font</CODE>.
@@ -201,69 +202,86 @@ public class Chunk implements Element {
 		this(OBJECT_REPLACEMENT_CHARACTER, new Font());
 		Image copyImage = Image.getInstance(image);
 		copyImage.setAbsolutePosition(Float.NaN, Float.NaN);
-		setAttribute(IMAGE, new Object[] { copyImage, new Float(offsetX),
-				new Float(offsetY), Boolean.FALSE });
+		setAttribute(IMAGE, new Object[] { copyImage, new Float(offsetX), new Float(offsetY), Boolean.FALSE });
 	}
 
 	/**
 	 * Key for drawInterface of the Separator.
-	 * @since	2.1.2
+	 * 
+	 * @since 2.1.2
 	 */
 	public static final String SEPARATOR = "SEPARATOR";
-	
+
 	/**
-	 * Creates a separator Chunk.
-     * Note that separator chunks can't be used in combination with tab chunks!
-	 * @param	separator	the drawInterface to use to draw the separator.
-	 * @since	2.1.2
+	 * Creates a separator Chunk. Note that separator chunks can't be used in
+	 * combination with tab chunks!
+	 * 
+	 * @param separator
+	 *            the drawInterface to use to draw the separator.
+	 * @since 2.1.2
 	 */
 	public Chunk(DrawInterface separator) {
 		this(separator, false);
-	}	
-	
+	}
+
 	/**
-	 * Creates a separator Chunk.
-     * Note that separator chunks can't be used in combination with tab chunks!
-	 * @param	separator	the drawInterface to use to draw the separator.
-	 * @param	vertical	true if this is a vertical separator
-	 * @since	2.1.2
+	 * Creates a separator Chunk. Note that separator chunks can't be used in
+	 * combination with tab chunks!
+	 * 
+	 * @param separator
+	 *            the drawInterface to use to draw the separator.
+	 * @param vertical
+	 *            true if this is a vertical separator
+	 * @since 2.1.2
 	 */
 	public Chunk(DrawInterface separator, boolean vertical) {
 		this(OBJECT_REPLACEMENT_CHARACTER, new Font());
-		setAttribute(SEPARATOR, new Object[] {separator, Boolean.valueOf(vertical)});
+		setAttribute(SEPARATOR, new Object[] { separator, Boolean.valueOf(vertical) });
 	}
 
 	/**
 	 * Key for drawInterface of the tab.
-	 * @since	2.1.2
+	 * 
+	 * @since 2.1.2
 	 */
 	public static final String TAB = "TAB";
-	
+
 	/**
-	 * Creates a tab Chunk.
-     * Note that separator chunks can't be used in combination with tab chunks!
-	 * @param	separator	the drawInterface to use to draw the tab.
-	 * @param	tabPosition	an X coordinate that will be used as start position for the next Chunk.
-	 * @since	2.1.2
+	 * Creates a tab Chunk. Note that separator chunks can't be used in
+	 * combination with tab chunks!
+	 * 
+	 * @param separator
+	 *            the drawInterface to use to draw the tab.
+	 * @param tabPosition
+	 *            an X coordinate that will be used as start position for the
+	 *            next Chunk.
+	 * @since 2.1.2
 	 */
 	public Chunk(DrawInterface separator, float tabPosition) {
 		this(separator, tabPosition, false);
 	}
-	
+
 	/**
-	 * Creates a tab Chunk.
-     * Note that separator chunks can't be used in combination with tab chunks!
-	 * @param	separator	the drawInterface to use to draw the tab.
-	 * @param	tabPosition	an X coordinate that will be used as start position for the next Chunk.
-	 * @param	newline		if true, a newline will be added if the tabPosition has already been reached.
-	 * @since	2.1.2
+	 * Creates a tab Chunk. Note that separator chunks can't be used in
+	 * combination with tab chunks!
+	 * 
+	 * @param separator
+	 *            the drawInterface to use to draw the tab.
+	 * @param tabPosition
+	 *            an X coordinate that will be used as start position for the
+	 *            next Chunk.
+	 * @param newline
+	 *            if true, a newline will be added if the tabPosition has
+	 *            already been reached.
+	 * @since 2.1.2
 	 */
 	public Chunk(DrawInterface separator, float tabPosition, boolean newline) {
 		this(OBJECT_REPLACEMENT_CHARACTER, new Font());
 		if (tabPosition < 0) {
-			throw new IllegalArgumentException(MessageLocalization.getComposedMessage("a.tab.position.may.not.be.lower.than.0.yours.is.1", String.valueOf(tabPosition)));
+			throw new IllegalArgumentException(MessageLocalization.getComposedMessage("a.tab.position.may.not.be.lower.than.0.yours.is.1",
+					String.valueOf(tabPosition)));
 		}
-		setAttribute(TAB, new Object[] {separator, new Float(tabPosition), Boolean.valueOf(newline), new Float(0)});
+		setAttribute(TAB, new Object[] { separator, new Float(tabPosition), Boolean.valueOf(newline), new Float(0) });
 	}
 
 	/**
@@ -278,11 +296,9 @@ public class Chunk implements Element {
 	 * @param changeLeading
 	 *            true if the leading has to be adapted to the image
 	 */
-	public Chunk(Image image, float offsetX, float offsetY,
-			boolean changeLeading) {
+	public Chunk(Image image, float offsetX, float offsetY, boolean changeLeading) {
 		this(OBJECT_REPLACEMENT_CHARACTER, new Font());
-		setAttribute(IMAGE, new Object[] { image, new Float(offsetX),
-				new Float(offsetY), Boolean.valueOf(changeLeading) });
+		setAttribute(IMAGE, new Object[] { image, new Float(offsetX), new Float(offsetY), Boolean.valueOf(changeLeading) });
 	}
 
 	// implementation of the Element-methods
@@ -382,9 +398,7 @@ public class Chunk implements Element {
 	 *         space.
 	 */
 	public boolean isEmpty() {
-		return (content.toString().trim().length() == 0)
-				&& (content.toString().indexOf("\n") == -1)
-				&& (attributes == null);
+		return (content.toString().trim().length() == 0) && (content.toString().indexOf("\n") == -1) && (attributes == null);
 	}
 
 	/**
@@ -396,9 +410,7 @@ public class Chunk implements Element {
 		if (getImage() != null) {
 			return getImage().getScaledWidth();
 		}
-		return font.getCalculatedBaseFont(true).getWidthPoint(getContent(),
-				font.getCalculatedSize())
-				* getHorizontalScaling();
+		return font.getCalculatedBaseFont(true).getWidthPoint(getContent(), font.getCalculatedSize()) * getHorizontalScaling();
 	}
 
 	// attributes
@@ -427,7 +439,9 @@ public class Chunk implements Element {
 
 	/**
 	 * Sets the attributes all at once.
-	 * @param	attributes	the attributes of a Chunk
+	 * 
+	 * @param attributes
+	 *            the attributes of a Chunk
 	 */
 	public void setAttributes(HashMap attributes) {
 		this.attributes = attributes;
@@ -497,8 +511,7 @@ public class Chunk implements Element {
 	 * @return this <CODE>Chunk</CODE>
 	 */
 	public Chunk setUnderline(float thickness, float yPosition) {
-		return setUnderline(null, thickness, 0f, yPosition, 0f,
-				PdfContentByte.LINE_CAP_BUTT);
+		return setUnderline(null, thickness, 0f, yPosition, 0f, PdfContentByte.LINE_CAP_BUTT);
 	}
 
 	/**
@@ -508,8 +521,8 @@ public class Chunk implements Element {
 	 * lines.
 	 * 
 	 * @param color
-	 *            the color of the line or <CODE>null</CODE> to follow the
-	 *            text color
+	 *            the color of the line or <CODE>null</CODE> to follow the text
+	 *            color
 	 * @param thickness
 	 *            the absolute thickness of the line
 	 * @param thicknessMul
@@ -524,21 +537,17 @@ public class Chunk implements Element {
 	 *            and PdfContentByte.LINE_CAP_PROJECTING_SQUARE
 	 * @return this <CODE>Chunk</CODE>
 	 */
-	public Chunk setUnderline(Color color, float thickness, float thicknessMul,
-			float yPosition, float yPositionMul, int cap) {
+	public Chunk setUnderline(Color color, float thickness, float thicknessMul, float yPosition, float yPositionMul, int cap) {
 		if (attributes == null)
 			attributes = new HashMap();
-		Object obj[] = {
-				color,
-				new float[] { thickness, thicknessMul, yPosition, yPositionMul, cap } };
-		Object unders[][] = Utilities.addToArray((Object[][]) attributes.get(UNDERLINE),
-				obj);
+		Object obj[] = { color, new float[] { thickness, thicknessMul, yPosition, yPositionMul, cap } };
+		Object unders[][] = Utilities.addToArray((Object[][]) attributes.get(UNDERLINE), obj);
 		return setAttribute(UNDERLINE, unders);
 	}
-	
+
 	/** Key for sub/superscript. */
 	public static final String SUBSUPSCRIPT = "SUBSUPSCRIPT";
-	
+
 	/**
 	 * Sets the text displacement relative to the baseline. Positive values rise
 	 * the text, negative values lower the text.
@@ -615,10 +624,8 @@ public class Chunk implements Element {
 	 *            increase the size of the rectangle in the top
 	 * @return this <CODE>Chunk</CODE>
 	 */
-	public Chunk setBackground(Color color, float extraLeft, float extraBottom,
-			float extraRight, float extraTop) {
-		return setAttribute(BACKGROUND, new Object[] { color,
-				new float[] { extraLeft, extraBottom, extraRight, extraTop } });
+	public Chunk setBackground(Color color, float extraLeft, float extraBottom, float extraRight, float extraTop) {
+		return setAttribute(BACKGROUND, new Object[] { color, new float[] { extraLeft, extraBottom, extraRight, extraTop } });
 	}
 
 	/** Key for text rendering mode. */
@@ -639,14 +646,11 @@ public class Chunk implements Element {
 	 *            PdfContentByte.TEXT_RENDER_MODE_STROKE</CODE> and <CODE>
 	 *            PdfContentByte.TEXT_RENDER_MODE_FILL_STROKE</CODE>.
 	 * @param strokeColor
-	 *            the stroke color or <CODE>null</CODE> to follow the text
-	 *            color
+	 *            the stroke color or <CODE>null</CODE> to follow the text color
 	 * @return this <CODE>Chunk</CODE>
 	 */
-	public Chunk setTextRenderMode(int mode, float strokeWidth,
-			Color strokeColor) {
-		return setAttribute(TEXTRENDERMODE, new Object[] { new Integer(mode),
-				new Float(strokeWidth), strokeColor });
+	public Chunk setTextRenderMode(int mode, float strokeWidth, Color strokeColor) {
+		return setAttribute(TEXTRENDERMODE, new Object[] { new Integer(mode), new Float(strokeWidth), strokeColor });
 	}
 
 	/** Key for split character. */
@@ -666,7 +670,7 @@ public class Chunk implements Element {
 
 	/** Key for hyphenation. */
 	public static final String HYPHENATION = "HYPHENATION";
-	
+
 	/**
 	 * sets the hyphenation engine to this <CODE>Chunk</CODE>.
 	 * 
@@ -706,13 +710,12 @@ public class Chunk implements Element {
 	 */
 
 	public Chunk setRemoteGoto(String filename, int page) {
-		return setAttribute(REMOTEGOTO, new Object[] { filename,
-				new Integer(page) });
+		return setAttribute(REMOTEGOTO, new Object[] { filename, new Integer(page) });
 	}
 
 	/** Key for local goto. */
 	public static final String LOCALGOTO = "LOCALGOTO";
-	
+
 	/**
 	 * Sets a local goto for this <CODE>Chunk</CODE>.
 	 * <P>
@@ -757,7 +760,7 @@ public class Chunk implements Element {
 	public Chunk setGenericTag(String text) {
 		return setAttribute(GENERICTAG, text);
 	}
-	
+
 	/** Key for image. */
 	public static final String IMAGE = "IMAGE";
 
@@ -777,7 +780,7 @@ public class Chunk implements Element {
 			return (Image) obj[0];
 		}
 	}
-	
+
 	/** Key for Action. */
 	public static final String ACTION = "ACTION";
 
@@ -816,7 +819,7 @@ public class Chunk implements Element {
 	public Chunk setAnchor(String url) {
 		return setAttribute(ACTION, new PdfAction(url));
 	}
-	
+
 	/** Key for newpage. */
 	public static final String NEWPAGE = "NEWPAGE";
 
@@ -843,10 +846,10 @@ public class Chunk implements Element {
 	public Chunk setAnnotation(PdfAnnotation annotation) {
 		return setAttribute(PDFANNOTATION, annotation);
 	}
-	
+
 	/**
 	 * @see com.itextpdf.text.Element#isContent()
-	 * @since	iText 2.0.8
+	 * @since iText 2.0.8
 	 */
 	public boolean isContent() {
 		return true;
@@ -854,23 +857,25 @@ public class Chunk implements Element {
 
 	/**
 	 * @see com.itextpdf.text.Element#isNestable()
-	 * @since	iText 2.0.8
+	 * @since iText 2.0.8
 	 */
 	public boolean isNestable() {
 		return true;
 	}
 
 	/**
-     * Returns the hyphenation (if present).
-     * @since	2.1.2
+	 * Returns the hyphenation (if present).
+	 * 
+	 * @since 2.1.2
 	 */
-    public HyphenationEvent getHyphenation() {
-        if (attributes == null) return null;
-        return (HyphenationEvent) attributes.get(Chunk.HYPHENATION);
+	public HyphenationEvent getHyphenation() {
+		if (attributes == null)
+			return null;
+		return (HyphenationEvent) attributes.get(Chunk.HYPHENATION);
 	}
-	
+
 	// keys used in PdfChunk
-	
+
 	/** Key for color. */
 	public static final String COLOR = "COLOR";
 
@@ -885,13 +890,14 @@ public class Chunk implements Element {
 	/**
 	 * Sets the character spacing.
 	 * 
-	 * @param charSpace the character spacing value
+	 * @param charSpace
+	 *            the character spacing value
 	 * @return this <CODE>Chunk</CODE>
 	 */
 	public Chunk setCharacterSpacing(float charSpace) {
 		return setAttribute(CHAR_SPACING, new Float(charSpace));
 	}
-	
+
 	/**
 	 * Gets the character spacing.
 	 * 
